# local-smartz

./: .gitignore  AGENTS.md  HANDOFF.md  README.md  install.sh  pyproject.toml
.build-loop/: feedback.md  goal.md  goal.prior.md  intent.md  plan.md  plan.prior.md  state.json
.build-loop/evals/: 2026-04-13-7-item-batch-scorecard.md  2026-04-13-author-cancel-agents-scorecard.md  2026-04-13-codex-fixes-and-cp-scorecard.md  2026-04-13-cross-mac-plugins-scorecard.md  2026-04-13-dmg-and-models-scorecard.md  2026-04-13-followups-scorecard.md  2026-04-14-B+C-scorecard.md  2026-04-14-five-items-scorecard.md  2026-04-14-three-items-scorecard.md  2026-04-23-live-smoke.md  2026-04-23-local-first-multi-agent-followup-scorecard.md  2026-04-23-local-first-multi-agent-scorecard.md  2026-04-23-phase-3-orchestrator-smoke.md  2026-04-23-phase-3-parallel-smoke.md  2026-04-23-phase-3-reflection-smoke.md  2026-04-23-phase-3-scorecard.md  2026-04-23-phoenix-smoke.md  2026-04-27-model-eval-matrix.md  2026-04-27-routing-security-package-scorecard.md  2026-05-08-llm-provider-optimizations-scorecard.md  2026-05-08-multi-provider-parity.md  2026-05-08-multi-provider-parity.tsv
.build-loop/issues/: cache-discount-math.md
.build-loop/memory/: MEMORY.md  gotcha_serve_sse_live_smoke_required.md
.build-loop/optimize/experiments/: 2026-04-27-query-doe-routing-score.json  2026-04-27-query-doe-routing-score.tsv
.build-loop/research/: 2026-04-23-phase-3-plan.md  2026-04-26-anthropic-plugin-spec-snapshot.md  2026-04-26-ui-audit-plus-plugin-compliance.md
.build-loop/scripts/: live-smoke.py
.github/workflows/: README.md  macos.yml  python.yml
app/: LocalSmartz-Installer.dmg  build-dmg.sh  project.yml
app/LocalSmartz/: Info.plist  LocalSmartzApp.swift
app/LocalSmartz/Models/: AppState.swift  GlobalSettings.swift  ResearchThread.swift  SSEEvent.swift
app/LocalSmartz/Services/: BackendManager.swift  ModelWarmup.swift  ProjectIndex.swift  SSEClient.swift  SetupSSEClient.swift
app/LocalSmartz/Views/: AgentRoutingTab.swift  AgentsTab.swift  AuthorView.swift  ContentView.swift  EvalTab.swift  InstallModelSheet.swift  MainView.swift  ModelsTab.swift  OutputView.swift  PatternTab.swift  ResearchView.swift  SettingsTabs.swift  SettingsView.swift  SetupHelp.swift  SetupProgressView.swift  SetupView.swift  StatusBanner.swift  StatusBarView.swift  ThreadListView.swift
app/scripts/: README.md  deepagents-slim.patch  embed-python.sh  make-icon.py
docs/: config.example.json  lite-model-hardening.md
docs/plans/: 2026-05-08-groq-integration-followups.md  2026-05-08-llm-provider-optimizations.md  2026-05-08-streaming-and-pricing-followups.md
docs/superpowers/plans/: 2026-03-17-seamless-install-first-run.md  2026-03-22-guided-setup-wizard.md  2026-03-22-web-ui-redesign.md  2026-03-23-langsmith-tracing.md  2026-03-23-playwright-scraping.md
docs/superpowers/specs/: 2026-03-22-e2e-test-plan-design.md  (+6 more)
references/: bundle-size.md
scripts/: refresh-pricing.py  run-phoenix.sh  ui-smoke.sh
src/localsmartz/: __init__.py  __main__.py  agent.py  agent_role_doe.py  artifacts.py  asgi_app.py  benchmarking.py  config.py  cost.py  doctor.py  drift.py  global_config.py  log_buffer.py  model_eval.py  observability.py  ollama.py  ollama_library.py  pipeline.py  profiles.py  query_doe.py  routing.py  secrets.py  serve.py  server_timing.py  threads.py  tracing.py  validation.py
tests/: test_agent_config.py  test_agent_dedup.py  test_agent_intent_retention.py  test_agent_plugin_integration.py  test_agent_role_doe.py  test_agent_routing.py  test_artifacts.py  test_asgi_app.py  test_benchmarking.py  test_browser.py  test_checkpointer.py  test_cli_model_subcommand.py  test_cli_subcommands.py  test_config.py  test_cost.py  test_cost_cache_discount.py  test_cost_freshness.py  test_cost_groq_pricing.py  test_cost_prefer_real.py  test_doctor.py  test_drift.py  test_fast_path.py  test_fast_path_model_selection.py  test_fast_path_planner.py  test_global_config.py  test_hardware.py  test_harmony.py  test_log_buffer.py  test_model_eval.py  test_model_eval_multi_provider.py  test_model_fallback.py  test_models_registry.py  test_observability_probe.py  test_ollama.py  test_ollama_library.py  test_ollama_warmup.py  test_orchestrator.py  test_orchestrator_parallel.py  test_pattern_budget_warn.py  test_pattern_orchestrator.py  (+46 more)
tests/fixtures/: mock_mcp_server.py
(+50 files in other folders)
