[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "localsmartz"
version = "0.1.0"
description = "Local-first multi-agent research system powered by Ollama"
requires-python = ">=3.12"
license = "MIT"

dependencies = [
    "deepagents",
    "langchain-ollama",
    "langsmith>=0.3.0",
    # Document processing
    "pypdf>=4.3.0",
    "pdfplumber>=0.11.0",
    "openpyxl>=3.1.4",
    "python-docx>=1.1.0",
    # Web scraping
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "httpx>=0.28.0",
    # Web search
    "duckduckgo-search>=7.0.0",
]

[project.scripts]
localsmartz = "localsmartz.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/localsmartz"]
